<resources>
    <string name="app_name">My Application</string>
    <string name="zero">0</string>
    <string name="double_touch">Double Touch</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="bout_mode">Bout Mode</string>
    <string name="settings">Settings</string>
    <string name="cards">Cards</string>
    <string name="actions">Actions</string>
    <string name="select_one">Select One</string>
    <string name="practice_length">Practice Length</string>
    <string name="when_enabled_tapping_start_will_start_stop_the_timer">When enabled, tapping Start will start/stop the timer</string>
    <string name="when_enabled_will_buzz_when_time_runs_out">When enabled, will buzz when time runs out</string>
    <string name="timer_sound">Timer Sound</string>
    <string name="when_enabled_will_play_a_sound_when_time_runs_out_make_sure_your_volume_is_turned_up">When enabled, will play a sound when time runs out. Make sure your volume is turned up!</string>
    <string name="number_of_touches_in_a_practice_bout">Number of touches in a practice bout</string>
    <string name="bout_end_dialog_text">Victory %1$s: score is %2$d to %3$d</string>
    <string name="cancel">Cancel</string>
    <string name="new_bout">New bout</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="black">Black</string>
    <string name="done">Done</string>
    <string name="change_time_remaining">Change Time Remaining</string>
    <string name="medical_break">Medical Break</string>
    <string name="next_bout">Next Bout</string>
    <string name="penalty_chart">Penalty Chart</string>
</resources>