<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/main_content_horizontal_margin"
    android:layout_marginVertical="@dimen/main_content_vertical_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/left_cards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_yellow"
            android:layout_marginBottom="@dimen/list_vertical_spacing"
            android:padding="@dimen/text_button_padding"
            android:textSize="@dimen/bottomsheet_item_title_size"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:text="@string/yellow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_red"
            android:layout_marginBottom="@dimen/list_vertical_spacing"
            android:padding="@dimen/text_button_padding"
            android:textSize="@dimen/bottomsheet_item_title_size"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:text="@string/red"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_black"
            android:padding="@dimen/text_button_padding"
            android:layout_marginBottom="@dimen/list_vertical_spacing"
            android:textSize="@dimen/bottomsheet_item_title_size"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:text="@string/black"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_yellow"
            android:layout_marginBottom="@dimen/list_vertical_spacing"
            android:padding="@dimen/text_button_padding"
            android:textSize="@dimen/bottomsheet_item_title_size"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:text="@string/yellow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_red"
            android:layout_marginBottom="@dimen/list_vertical_spacing"
            android:padding="@dimen/text_button_padding"
            android:textSize="@dimen/bottomsheet_item_title_size"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:text="@string/red"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_black"
            android:padding="@dimen/text_button_padding"
            android:layout_marginBottom="@dimen/list_vertical_spacing"
            android:textSize="@dimen/bottomsheet_item_title_size"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:text="@string/black"/>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_vertical_spacing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="18sp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/left_cards"
        android:text="@string/done"/>


</androidx.constraintlayout.widget.ConstraintLayout>